Added search bar to the UI, and began creating the template for the weather card

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather</title>
 </head>
 <body>
+    <div class="search-container">
+        <input type="text" name="city-search" id="city-search" placeholder="Search for City">
+        <button><img src="./assets/search-icon.svg" alt=""></button>
+    </div>
     
+    <div class="weather-card">
+        <h1>Kansas City</h1>
+    </div>
 </body>
 </html>
