Completed all weather app requirements

--- a/src/template.html
+++ b/src/template.html
@@ -11,8 +11,29 @@
         <button><img src="./assets/search-icon.svg" alt=""></button>
     </div>
     
-    <div class="weather-card">
+    <!-- <div class="weather-card">
         <h1>Kansas City</h1>
-    </div>
+        <div class="temp-container">
+            <p id="current-temp">75°</p>
+            <img src="./assets/search-icon.svg" alt="">
+        </div>
+        <div class="high-low">
+            <p>H: 75</p>
+            <p>L: 60</p>
+        </div>
+
+        <div class="forcast-container">
+            <div class="forcast-card">
+                <div class="forcast-temp">
+                    <p>75</p>
+                    <img src="./assets/search-icon.svg" alt="">
+                </div>
+                <div>
+                    <p>H: 75</p>
+                    <p>L: 60</p>
+                </div>
+            </div>  
+        </div>
+    </div> -->
 </body>
 </html>
